ECA-10627: Added the FNR handling to the editUser method as well